@@ -1,3 +1,6 @@
+2018-06-28  6.9.10-4 Cristy  <quetzlzacatenango@image...>
+  * Small tweaks to compile under Cygwin.
+
 2018-06-24  6.9.10-3 Cristy  <quetzlzacatenango@image...>
   * Release ImageMagick version 6.9.10-3, GIT revision 13618:69366aab3:20180624.
 
